# github-actions-demo

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
monorepo/: pyproject.toml
monorepo/data/: demo.yaml
monorepo/src/monorepo/: main.py
monorepo/src/monorepo/utils/: demo.py
monorepo/tests/: test_main.py
